<resources>
    <string name="app_name">Neighbourly</string>

    <string name="add">ADD</string>
    <string name="title_home">Home</string>
    <string name="cart">Cart</string>
    <string name="title_category">Category</string>
    <string name="title_cart">Cart</string>
    <string name="about">About Us</string>
    <string name="logout">Logout</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="search">Search</string>
    <string name="personal_info">Personal Info</string>
    <string name="login">Log in</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="fav_text">Wish List</string>
    <string name="product_details">Product Details</string>
    <string name="quantity">Quantity</string>
    <string name="checkout">Checkout</string>
    <string name="order_list">Order Summary</string>
    <string name="confirm">Confirm</string>
    <string name="proceed">Proceed</string>
    <string name="offers">Offers</string>
    <string name="view_offers">View Offers</string>
    <string name="success_order">Your order has been successfully placed !</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="order_track_detail">Order Details</string>
    <string name="ok">OK</string>
    <string name="all">All</string>
    <string name="btn_ok">OK</string>
    <string name="update">Update</string>

    <string-array name="categories">
        <item>Beverages</item>
        <item>Bread/Bakery</item>
        <item>Dairy</item>
        <item>Dry/Baking Goods</item>
        <item>Frozen Foods</item>
        <item>Fruits &amp; Veggies</item>
    </string-array>

    <string name="delete">Delete</string>
    <string name="permission_settings">Settings</string>
    <string name="delivered">Delivered</string>
    <string name="sold_out">Sold out</string>
    <string name="your_orders">Your Orders</string>
    <string name="_title_profile">Profile</string>
    <string name="product_description">Product description</string>
    <string name="product_price">Product price</string>
    <string name="product_name">Product name</string>
    <string name="upload">upload</string>
    <string name="save">save</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="mobile">Phone number</string>
    <string name="search_for_products">Search For Products</string>
</resources>