<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/navMain">

    <fragment
        android:id="@+id/navMain"
        android:name="com.android.neighbourly.fragments.MainPageFragment"
        android:label="@string/offers"
        tools:layout="@layout/fragment_main_page" >
        <action
            android:id="@+id/action_navMain_to_fragment_product_description"
            app:destination="@id/fragment_product_description" />
    </fragment>

    <fragment
        android:id="@+id/settings"
        android:name="com.android.neighbourly.fragments.SettingsFragment"
        android:label="@string/permission_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/addProductFragment"
        android:name="com.android.neighbourly.fragments.AddProductFragment"
        android:label="@string/add"
        tools:layout="@layout/fragment_add_product" >
        <action
            android:id="@+id/action_addProductFragment_to_navMain"
            app:destination="@id/navMain" />
    </fragment>
    <fragment
        android:id="@+id/logout"
        android:name="com.android.neighbourly.fragments.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/fragment_product_description"
        android:name="com.android.neighbourly.fragments.ProductDescriptionFragment"
        android:label="@string/product_details"
        tools:layout="@layout/fragment_product_description" >
        <action
            android:id="@+id/action_fragment_product_description_to_shoppingCart"
            app:destination="@id/shoppingCart" />
    </fragment>
    <fragment
        android:id="@+id/shoppingCart"
        android:name="com.android.neighbourly.fragments.ShoppingCartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_shopping_cart" >
        <action
            android:id="@+id/action_shoppingCart_to_navMain"
            app:destination="@id/navMain" />
    </fragment>

    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.android.neighbourly.fragments.CheckoutFragment"
        android:label="@string/checkout"
        tools:layout="@layout/fragment_checkout" >
        <action
            android:id="@+id/action_checkoutFragment_to_historicalOrders"
            app:destination="@id/historicalOrders" />
    </fragment>
    <fragment
        android:id="@+id/historicalOrders"
        android:name="com.android.neighbourly.fragments.HistoricalOrdersFragment"
        android:label="@string/your_orders"
        tools:layout="@layout/fragment_historical_orders" >
        <action
            android:id="@+id/action_historicalOrders_to_navMain"
            app:destination="@id/navMain" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.android.neighbourly.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>